--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifiers =
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 	Framework :: AsyncIO
 	Framework :: Trio
 
@@ -32,15 +33,9 @@ classifiers =
 packages = muffin_prometheus
 include_package_data = True
 python_requires = >= 3.7
-install_requires = 
-	muffin          >= 0.71
-	asgi-prometheus >= 1.0.1
 
-[options.extras_require]
-tests = 
-	pytest
-	pytest-aio[curio,trio]
-	pytest-mypy
+[mypy]
+ignore_missing_imports = True
 
 [pylama]
 ignore = D211,D213
@@ -55,9 +50,9 @@ ignore = D
 addopts = -xsv --mypy
 
 [tox:tox]
-envlist = py37,py38,py39
+envlist = py37,py38,py39,py310
 
 [testenv]
 deps = -e .[tests]
 commands = 
-	pytest tests.py
+    pytest tests.py
