--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 commit = True
 current_version = 1.2.0
-files = muffin_prometheus/__init__.py
+files = pyproject.toml
 tag = True
 tag_name = {new_version}
