--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
-[project]
+[tool.poetry]
 name = "muffin-prometheus"
 version = "1.3.0"
 description = "Prometheus metrics exporter for Muffin framework"
 readme = "README.rst"
-requires-python = ">=3.8"
-license = {"text" = "MIT License"}
-authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
+license = "MIT"
+authors = ["Kirill Klenov <horneds@gmail.com>"]
 keywords = ["prometheus-exporter", "muffin", "asyncio", "trio", "curio"]
 classifiers = [
   "Development Status :: 5 - Production/Stable",
@@ -13,37 +12,31 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Topic :: Internet :: WWW/HTTP",
   "Framework :: AsyncIO",
   "Framework :: Trio",
 ]
-dependencies = [
-  "muffin >= 0.92",
-  "asgi-prometheus >= 1.1.2",
-]
-
-[project.urls]
 homepage = "https://github.com/klen/muffin-prometheus"
 repository = "https://github.com/klen/muffin-prometheus"
 
-[project.optional-dependencies]
-tests = [
-  "pytest",
-  "pytest-aio[curio,trio]",
-  "pytest-mypy",
-  "ruff",
-]
-dev = ["pre-commit", "refurb", "bump2version"]
+[tool.poetry.dependencies]
+python = "^3.9"
+muffin = "^0"
+asgi-prometheus = "^1.1.2"
 
-[tool.setuptools]
-packages = ['muffin_prometheus']
+[tool.poetry.group.tests.dependencies]
+pytest = "*"
+pytest-aio = { version = "*", extras = ["curio", "trio"] }
+pytest-mypy = "*"
+ruff = "*"
 
-[tool.setuptools.package-data]
-muffin_prometheus = ["py.typed"]
+[tool.poetry.group.dev.dependencies]
+pre-commit = "*"
+bump2version = "*"
 
 [tool.pytest.ini_options]
 addopts = "-xsv --mypy"
@@ -55,7 +48,7 @@ ignore_missing_imports = true
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py38,py39,py310,py311,pypy39
+envlist = py39,py310,py311,py312,pypy39
 
 [testenv]
 deps = -e .[tests]
@@ -71,7 +64,28 @@ commands =
 [tool.ruff]
 fix = true
 line-length = 100
-target-version = "py38"
+target-version = "py39"
 exclude = [".venv", "docs", "examples"]
+
+[tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "RET", "S101", "PLR2004", "PLR0912", "N804", "A003", "TRY003"]
+ignore = [
+  "A003",
+  "ANN",
+  "D",
+  "DJ",
+  "EM",
+  "N804",
+  "PLR0912",
+  "PLR2004",
+  "RET",
+  "RSE",
+  "S101",
+  "SLF",
+  "TRY003",
+  "UP",
+]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
